# HWTransMIB

./: .gitignore  LICENSE  README.md  build.sh  hwtransmib.spec  pyproject.toml
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-06-25-mib-explorer.md  2026-06-26-index-display.md  2026-06-26-packaging.md  2026-06-26-ui-optimizations.md  2026-06-28-medium-priority-optimizations.md  2026-06-30-oid-builder-enum-completion.md  2026-07-01-detail-panel-optimizations.md  2026-07-01-octetstring-template-prefill.md
docs/superpowers/specs/: 2026-06-25-mib-explorer-design.md  2026-06-26-index-display-design.md  2026-06-26-packaging-design.md  2026-06-26-ui-optimizations-design.md  2026-06-28-augments-test-design.md  2026-06-28-medium-priority-optimizations-design.md  2026-06-28-readme-ci-cache-design.md  2026-06-30-history-sort-design.md  2026-06-30-oid-builder-enum-completion-design.md  2026-07-01-detail-panel-optimizations-design.md  2026-07-01-octetstring-template-prefill-design.md
src/hwtransmib/: __init__.py
src/hwtransmib/kernel/: mib_parser.py  model.py  oid_builder.py  search_index.py  string_templates.py  tree_builder.py
src/hwtransmib/persistence/: json_store.py  user_data.py
src/hwtransmib/ui/: app.py  (+6 more)
tests/: conftest.py
tests/kernel/: test_augments.py  test_implied_index.py  test_lenient_parser.py  test_mib_parser.py  test_model.py  test_oid_builder.py  test_plain_text_mib.py  test_search_index.py  test_string_templates.py  test_tc_integer_detection.py  test_tree_builder.py
tests/perf/: bench_search.py
tests/persistence/: test_json_store.py  test_user_data.py
tests/services/: test_import_service.py  test_multi_file_import.py  test_oid_build_service.py  test_search_service.py
tests/ui/: test_app_resources.py  test_main_window_state.py  test_mib_tree_model.py  test_oid_builder_dialog.py  test_property_panel.py  test_search_results.py
(+8 files in other folders)
